@@ -1,25 +1,45 @@
 package dk.toldst.eutk.as4client;
+import com.sun.xml.messaging.saaj.util.JAXMStreamSource;
 import dk.toldst.eutk.as4client.as4.As4DtoCreator;
 import dk.toldst.eutk.as4client.as4.As4HttpClient;
 import dk.toldst.eutk.as4client.as4.As4Message;
+import dk.toldst.eutk.as4client.as4.Compression;
 import dk.toldst.eutk.as4client.exceptions.AS4Exception;
-import org.apache.commons.lang.ObjectUtils;
 import org.apache.wss4j.common.util.XMLUtils;
 import org.oasis_open.docs.ebxml_msg.ebms.v3_0.ns.core._200704.Messaging;
+import org.w3c.dom.Document;
+import org.w3c.dom.NodeList;
 
-import java.io.IOException;
+import com.sun.xml.messaging.saaj.*;
+
+import java.io.*;
 import java.nio.charset.StandardCharsets;
-import javax.xml.soap.SOAPException;
+import javax.xml.namespace.QName;
+import javax.xml.soap.Name;
+import javax.xml.soap.SOAPBody;
 import javax.xml.soap.SOAPHeader;
 import javax.xml.soap.SOAPMessage;
 import javax.xml.transform.TransformerException;
+import javax.xml.xpath.XPath;
+import javax.xml.xpath.XPathConstants;
+import javax.xml.xpath.XPathExpressionException;
+import javax.xml.xpath.XPathFactory;
 import java.util.*;
+import java.util.zip.GZIPInputStream;
+import java.util.zip.GZIPOutputStream;
 
 public class As4ClientInstance implements As4Client {
 
     private As4DtoCreator as4DtoCreator;
     private As4HttpClient as4HttpClient;
     private final String defaultMPC = "urn:fdc:dk.skat.mft.DMS/import2/response";
+
+    public void setCompression(boolean compression) {
+        this.compression = compression;
+    }
+
+    private boolean compression = false;
+
 
     public As4DtoCreator getAs4DtoCreator() {
         return as4DtoCreator;
@@ -35,142 +55,145 @@ public class As4ClientInstance implements As4Client {
     }
 
     @Override
-    public As4ClientResponseDto executePush(String service, String action, byte[] message, Map<String, String> messageProperties) throws AS4Exception {
-        return executePush(service, action, new String(message, StandardCharsets.UTF_8), "declaration.xml", messageProperties);
+    public String executePush(String service, String action, byte[] message, Map<String, String> messageProperties, String messageId) throws AS4Exception {
+        return executePush(service, action, new String(message, StandardCharsets.UTF_8), messageProperties, UUID.randomUUID().toString());
     }
 
     @Override
-    public As4ClientResponseDto executePush(String service, String action, Map<String, String> messageProperties) throws AS4Exception {
-        String messageId = UUID.randomUUID().toString();
-        return internalPush(service, action, "", "Declaration.xml", messageProperties, false, messageId);
+    public String executePush(String service, String action, byte[] message, Map<String, String> messageProperties) throws AS4Exception {
+        return executePush(service,action,message,messageProperties, UUID.randomUUID().toString());
     }
 
     @Override
-    public As4ClientResponseDto executePush(String service, String action, byte[] message, String fileName, Map<String, String> messageProperties, String messageId) throws AS4Exception {
-        return internalPush(service, action, new String(message, StandardCharsets.UTF_8), fileName, messageProperties, false, messageId);
+    public String executePush(String service, String action, Map<String, String> messageProperties, String messageId) throws AS4Exception {
+        return internalPush(service, action, "", messageProperties, false, UUID.randomUUID().toString());
     }
 
     @Override
-    public As4ClientResponseDto executePush(String service, String action, byte[] message, Map<String, String> messageProperties, String messageId) throws AS4Exception {
-        return executePush(service, action, new String(message, StandardCharsets.UTF_8), "Declaration.xml", messageProperties, messageId);
+    public String executePush(String service, String action, Map<String, String> messageProperties) throws AS4Exception {
+        return  executePush(service,action,messageProperties, UUID.randomUUID().toString());
+    }
+
+
+    @Override
+    public String executePush(String service, String action, String message, Map<String, String> messageProperties, String messageId) throws AS4Exception {
+        return internalPush(service, action, message, messageProperties, true, UUID.randomUUID().toString());
     }
 
     @Override
-    public As4ClientResponseDto executePush(String service, String action, byte[] message, String fileName, Map<String, String> messageProperties) throws AS4Exception {
-        String messageId = UUID.randomUUID().toString();
-        return internalPush(service, action, new String(message, StandardCharsets.UTF_8), fileName, messageProperties, true, messageId);
+    public String executePush(String service, String action, String message, Map<String, String> messageProperties) throws AS4Exception {
+        return executePush(service,action,message,messageProperties, UUID.randomUUID().toString());
     }
 
-    @Override
-    public As4ClientResponseDto executePush(String service, String action, String message, String fileName, Map<String, String> messageProperties, String messageId) throws AS4Exception {
-        return internalPush(service, action, message, fileName, messageProperties, true,messageId);
-    }
 
-    @Override
-    public As4ClientResponseDto executePush(String service, String action, String message, Map<String, String> messageProperties, String messageId) throws AS4Exception {
-        return internalPush(service, action, message, "declaration.xml", messageProperties, true, messageId);
-    }
+    private String internalPush(String service, String action, String message, Map<String, String> messageProperties, Boolean includeAttachment, String messageId) throws AS4Exception {
 
-    @Override
-    public As4ClientResponseDto executePush(String service, String action, String message, String fileName, Map<String, String> messageProperties) throws AS4Exception {
-        String messageId = UUID.randomUUID().toString();
-        return internalPush(service, action, message, fileName, messageProperties, true, messageId);
-    }
-
-    @Override
-    public As4ClientResponseDto executePush(String service, String action, String message, Map<String, String> messageProperties) throws AS4Exception {
-        String messageId = UUID.randomUUID().toString();
-        return internalPush(service, action, message, "declaration.xml", messageProperties, false, messageId);
-    }
-
-    @Override
-    public As4ClientResponseDto executePush(String service, String action, Map<String, String> messageProperties, String messageId) throws AS4Exception {
-        return internalPush(service, action, "", "Declaration.xml", messageProperties, false, messageId);
-    }
-
-    private As4ClientResponseDto internalPush(String service, String action, String message, String fileName, Map<String, String> messageProperties, Boolean includeAttachment, String messageId ) throws AS4Exception {
         As4Message as4Message = new As4Message();
+        byte[] messageBytes = message.getBytes(StandardCharsets.UTF_8);
+        if(includeAttachment) {
+            if(compression){
 
-        if(includeAttachment)
-        {
-            As4Message.As4Part part = CreatePart(message, fileName);
+                byte[] data = messageBytes;
+                ByteArrayOutputStream os = new ByteArrayOutputStream();
+                ByteArrayOutputStream os2 = new ByteArrayOutputStream();
+
+                GZIPOutputStream stream;
+                GZIPInputStream inputStream;
+                try {
+                    stream = Compression.compress(os);
+                    stream.write(data);
+                    stream.close();
+
+                    messageBytes = os.toByteArray();
+
+                    /*
+                    Base64.getEncoder().encodeToString();
+
+                    compressedMessage = Base64.getDecoder().decode(base64Message);
+
+                    InputStream is = new ByteArrayInputStream(compressedMessage);
+
+                    Compression.decompress(os2, is);
+
+                    decompressedMesssge = os2.toString();*/
+
+                } catch (IOException e) {
+                    throw new AS4Exception("Compression failed");
+                }
+            }
+            As4Message.As4Part part = CreatePart(messageBytes);
             as4Message.getAttachments().add(part);
         }
 
         as4Message.setMessageProperties(messageProperties);
         Messaging messaging = as4DtoCreator.createMessaging(service, action, "placeholder", as4Message, messageId);
-        As4ClientResponseDto as4ClientResponseDto = new As4ClientResponseDto();
 
         SOAPMessage soapMessage;
         try {
             soapMessage = as4HttpClient.sendRequest(messaging, as4Message);
-            as4ClientResponseDto.setFirstAttachment(tryGetFirstAttachment(soapMessage));
-            return as4ClientResponseDto;
+            javax.xml.soap.SOAPPart part = soapMessage.getSOAPPart();
+            com.sun.xml.messaging.saaj.util.JAXMStreamSource sc = (JAXMStreamSource) part.getContent();
+
+            String a = new String(sc.getInputStream().readAllBytes());
+            int i = 0;
+            return a;
+            //return new String(soapMessage.getAttachments().next().getDataHandler().getInputStream().readAllBytes());
         } catch (Exception e) {
             throw new AS4Exception("Failed to send (or receive) message" , e);
         }
 
     }
 
-    private As4Message.As4Part CreatePart(String message, String fileName) {
+
+
+    private As4Message.As4Part CreatePart(byte[] message) throws AS4Exception {
         As4Message.As4Part part = new As4Message.As4Part();
         part.setContent(message);
-        part.setProperties(Collections.singletonMap("original-file-name", fileName));
+        if(compression){
+            part.setProperties(Map.of("MimeType", "application/xml", "CharacterSet", "utf-8", "CompressionType", "application/gzip"));
+        }
+        else{
+            part.setProperties(Collections.singletonMap("original-file-name", "declaration.xml"));
+        }
+
         return part;
     }
 
 
     @Override
-    public As4ClientResponseDto executePull() throws AS4Exception {
+    public String executePull() throws AS4Exception {
         return executePull(defaultMPC);
     }
 
+    public String getNode(Document doc, String xPathString) throws XPathExpressionException {
+        XPath xPath = XPathFactory.newInstance().newXPath();
+        return xPath.evaluate(xPathString, doc);
+    }
+
+
     @Override
-    public As4ClientResponseDto executePull(String mpc) throws AS4Exception {
+    public String executePull(String mpc) throws AS4Exception {
         String messageId = UUID.randomUUID().toString();
         Messaging messaging = as4DtoCreator.createPullMessaging(mpc, messageId);
         SOAPMessage soapMessage = null;
-        As4ClientResponseDto as4ClientResponseDto = new As4ClientResponseDto();
         try {
+
             soapMessage = as4HttpClient.sendRequest(messaging, new As4Message());
             SOAPHeader header = soapMessage.getSOAPHeader();
-            String reftoOriginalID =  tryGetReftoOriginalID(soapMessage);
 
-            as4ClientResponseDto.setReftoOriginalID(reftoOriginalID);
-            as4ClientResponseDto.setFirstAttachment(tryGetFirstAttachment(soapMessage));
-
-            return as4ClientResponseDto;
+            //Rewrite using Yammer feedback - Remove Index Offsets
+            // getNode(header.getOwnerDocument(), "")
+            String reftoOriginalID =  header.getElementsByTagNameNS("*","Property").
+                    item(0).getChildNodes().item(0).getNodeValue();
+            return reftoOriginalID +  new String(soapMessage.getAttachments().next().getDataHandler().getInputStream().readAllBytes());
         } catch (Exception e) {
             String debugMessage = null;
             try {
-                if (soapMessage != null && soapMessage.getSOAPPart() != null && soapMessage.getSOAPPart().getOwnerDocument() != null) {
-                    debugMessage = XMLUtils.prettyDocumentToString(soapMessage.getSOAPPart().getOwnerDocument());
-                }
-            } catch (IOException ex) {
-                throw new AS4Exception("Failed to send (or receive) message" , e);
-            } catch (TransformerException ex) {
+                debugMessage = XMLUtils.prettyDocumentToString(soapMessage.getSOAPPart().getOwnerDocument());
+            } catch (IOException | TransformerException ex) {
                 throw new AS4Exception("Failed to send (or receive) message" , e);
             }
             throw new AS4Exception("Failed to send (or receive) message, recieved from server: " + debugMessage , e);
         }
-    }
-
-    private String tryGetFirstAttachment(SOAPMessage soapMessage) {
-        try {
-            return new String(soapMessage.getAttachments().next().getDataHandler().getInputStream().readAllBytes());
-        }
-        catch (Exception e){
-            return null;
-        }
-    }
-
-    private String tryGetReftoOriginalID(SOAPMessage soapMessage) {
-        try {
-            SOAPHeader header = soapMessage.getSOAPHeader();
-            return header.getElementsByTagNameNS("*","Property").item(0).getChildNodes().item(0).getNodeValue();
-        }catch (Exception e){
-            return null;
-        }
-
     }
 }
